  pysnmp.entity.rfc3413.oneliner.mibvar featuring basically the same
  features but within a stateful, dedicated object.
- Auth & target configuration container classes moved to their separate
  modules at oneliner API.
- The notificationType parameter of AsynNotificationOriginator.sendNotification
  made defaulted to reflect its optional nature.
- Built-in debugger now supports negating debugging categories.
- Fix to MIB data reading routine to make it working with possible Windows end-of-line's.
- Fix to CommandGenerator's SNMPv3 engine autodiscovery algorithm
  when retryCount is administratively set to 0.
- Fix to Notification Originator to make it communicating a single
  sendPduHandle to an application even when multiple INFORMs are triggered
  and processed by a single call by way of transport tagging feature.
- Fix to rfc2576:processIncomingMessage() to take SecurityModel into account
  when lookup up SecurityName by CommunityName. This allows mixed SNMPv1/v2c
  communication with the same target.
- Fix to internal MessageProcessing and SecurityModel timers so they become
  dependant on system timer resolution.
- Fix to v1.PDUAPI.setDefaults() method that used to set wrongly typed
  time-stamp component.
- Fix to IPv6 address handling to prevent system from crashing whilst
  running Python3. 
- Fix to SNMPv2 exception objects translation into SNMPv1 PDU and NEXT
  OIDs calculation.
- Fix to MibTree class to properly report noSuchObject & noSuchInstance
  SNMP special values.
- Fix to libsmi2pysnmp tool to make it working again in Python < 2.7
- Fix to exception handling at decodeMessageVersion() caller to prevent
  ASN.1 parsing errors crashing the whole app.
- Fix to GenericTrap type processing at rfc2576:v1Tov2c() which used to
  crash the whole SNMP engine.
- Fix to [possibly uninizilaized] pyasn1 objects printouts at
  MibInstrumController.__indexMib()
- Dedicated 'withmib' example set is obsolete and removed.